cambios en rama

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -29,7 +29,7 @@
         <section>
             <H1>Contacto</H1>
 
-            <form>
+            <form class="contacto">
 
                 <label for="nombre">Nombre</label> 
                 <input type="text" id="nombre" name="nombre" placeholder="ingrese su nombre"
