--- a/bootstrap/contacto.html
+++ b/bootstrap/contacto.html
@@ -4,51 +4,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto-Dra Ayelen Menendez</title>
-
+    <title>Servicios-Dra Ayelen Menendez</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-   
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/estilos2.css">
 </head>
 <body>
 
-    <header class="container">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<header class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-            <div class="container-fluid">
-                <img src="../imagenes/logo medicina estetica.jpg" alt="logo de medicina estetica" height="50" width="50" >
+        <div class="container-fluid">
+            <img src="../imagenes/logo%20medicina%20estetica.jpg" alt="logo de medicina estetica" height="50" width="50" >
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbar">
+                <ul class="navbar-nav ms-auto" >
 
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-
-                  <div class="collapse navbar-collapse" id="navbar">
-                      <ul class="navbar-nav ms-auto" >
-
-                    <li class="nav-item"> 
-                        <a class="nav-link" href="">Inicio</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html">Inicio</a>
                     </li>
-                    <li class="nav-item"> 
+                    <li class="nav-item">
                         <a class="nav-link" href="nosotros.html">Nosotros</a>
                     </li>
-                    <li class="nav-item"> 
-                        <a class="nav-link" href="">Servicios</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="servicios.html">Servicios</a>
                     </li>
-                    <li class="nav-item"> 
-                        <a class="nav-link" href="">Galeria</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="galeria.html">Galeria</a>
                     </li>
-                    <li class="nav-item"> 
-                        <a class="nav-link" href="">Contacto</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contacto.html">Contacto</a>
                     </li>
-        
-                      </ul>
 
-    </header>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
 
     <main class="container">
         <div class="fondo">
-            <h3 class="display-1 bg-light text-danger"> CONTACTO</h3>
+            <h1 class="display-3 headerTratamiento" align="center">Contacto</h1>
 
 
             <section class="container">
