--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Inicio-Dra Ayelen Menendez</title>
 
     <link rel="stylesheet" href="css/estilos2.css">
+    <link rel="stylesheet" href="css/mapStyle.css">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
