--- a/bootstrap/galeria.html
+++ b/bootstrap/galeria.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Galeria-Dra Ayelen Menendez</title>
+        <title>Galeria-Dra Ayelen Menendez-Medicina Estética</title>
         <link rel="stylesheet" href="../css/estilos.css">
         <link rel="stylesheet" href="../css/estilos2.css">
 
@@ -48,7 +48,7 @@
         </header>
         
         <section class="secciong">
-            <h2 class="secciong__titulo">La belleza es la expresión estética del amor</h2>
+            <h1 class="secciong__titulo">La belleza es la expresión estética del amor</h1>
             <br>
             <br>
 
@@ -139,16 +139,16 @@
 
         <ul class="nav justify-content-end">
             <li class="nav-item">
-                <a class="nav-link" href="../index.html">Inicio</a>
+                <a class="nav-link" href="../index.html" style="color:white;">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="servicios.html">Servicios</a>
+              <a class="nav-link" href="servicios.html" style="color:white;">Servicios</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="nosotros.html">Nosotros</a>
+              <a class="nav-link" href="nosotros.html" style="color:white;">Nosotros</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contacto</a>
+                <a class="nav-link" href="contacto.html" style="color:white;">Contacto</a>
             </li>
           </ul>
     
