--- a/bootstrap/contacto.html
+++ b/bootstrap/contacto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Servicios-Dra Ayelen Menendez</title>
+    <title>Contacto-Dra Ayelen Menendez-Medicina estética</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="../css/estilos2.css">
@@ -48,7 +48,8 @@
         <div class="fondo">
             <h1 class="display-3 headerTratamiento" align="center">Contacto</h1>
 
-
+            <p class="fw-lighter"> Para solicitar mas información y pedir un turno, complete el siguiente formulario y nos pondremos en contacto con usted en un plazo de 24h. para agendar 
+                su cita. Estaremos encantados de atenderle.    </p>
             <section class="container">
             <form>
             <input type="text" placeholder="Nombre" class="form-control mb-2">
@@ -100,16 +101,16 @@
 
         <ul class="nav justify-content-end">
             <li class="nav-item">
-                <a class="nav-link" href="../index.html">Inicio</a>
+                <a class="nav-link" href="../index.html" style="color:white;">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="servicios.html">Servicios</a>
+              <a class="nav-link" href="servicios.html" style="color:white;">Servicios</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="galeria.html">Galeria</a>
+              <a class="nav-link" href="galeria.html" style="color:white;">Galeria</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="nosotros.html">Nosotros</a>
+                <a class="nav-link" href="nosotros.html" style="color:white;">Nosotros</a>
             </li>
           </ul>
     
