--- a/bootstrap/servicios.html
+++ b/bootstrap/servicios.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Servicios-Dra Ayelen Menendez</title>
+        <title>Servicios-Dra Ayelen Menendez-Medicina Estética</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <link rel="stylesheet" href="../css/estilos2.css">
@@ -42,8 +42,8 @@
                 </div>
             </nav>
         </header>
-
-        <h1 class="display-3 headerTratamiento" align="center">Tratamientos médicos</h1>
+<h1 class="display-3 servicios" align="center">Conozca nuestros servicios</h1>
+        <h3 class="display-3 headerTratamiento" align="center">Tratamientos médicos</h3>
 
         <div class="card-group">
             <div class="card">
@@ -86,7 +86,7 @@
             <div class="card">
                 <img src="../imagenes/rinomodelacion.jpg" class="card-img-top" alt="..." height="300" width="50">
                 <div class="card-body">
-                    <h5 class="card-title"><div class="tratamientos"> rinomodelación </div></h5>
+                    <h5 class="card-title"><div class="tratamientos"> Rinomodelación </div></h5>
                     <p class="card-text"> Con el avance de la tecnología en productos inyectables, la rinomodelación ha ganado terreno en muchos tratamientos innovadores que logran mejorar notoriamente el rostro sin necesidad de una cirugía.
                         Sin necesidad de una cirugía plástica, se puede alinear el dorso nasal, elevar la punta de la nariz y modificar imperfecciones.
                         Con mínimos cuidados pre y post tratamiento, la aplicación toma sólo unos minutos, es prácticamente indolora (ya que el producto contiene lidocaína en su composición) y el resultado es instantáneo. </p>
@@ -101,7 +101,7 @@
         </div>
 
 
-        <h1 class="display-3 headerTratamiento" align="center">Tratamientos Esteticos</h1>
+        <h3 class="display-3 headerTratamiento" align="center">Tratamientos Esteticos</h3>
 
         <div class="card-group">
 
@@ -162,16 +162,16 @@
 
             <ul class="nav justify-content-end">
                 <li class="nav-item">
-                    <a class="nav-link" href="nosotros.html">Nosotros</a>
+                    <a class="nav-link" href="nosotros.html" style="color:white;">Nosotros</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="../index.html">Inicio</a>
+                  <a class="nav-link" href="../index.html" style="color:white;">Inicio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="galeria.html">Galeria</a>
+                  <a class="nav-link" href="galeria.html" style="color:white;">Galeria</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contacto.html">Contacto</a>
+                    <a class="nav-link" href="contacto.html" style="color:white;">Contacto</a>
                 </li>
               </ul>
         
