--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content=" En la clínica dermatológica Ayelen Menendez,ofrecemos atención integral en dermatología clínica y quirúrgica brindando todo tipo de tratamientos corporales y faciales de última tecnología. 
+     Tenemos un equipo de profesionales con amplia experiencia.">
+    
     <title>Inicio-Dra Ayelen Menendez-Medicina estética</title>
 
     <link rel="stylesheet" href="css/estilos2.css">
@@ -68,29 +71,7 @@
         </div>
     </section>
 
- <!--
-    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="imagenes/doctor.jpg" class="d-block w-100" alt="">
-            </div>
-            <div class="carousel-item">
-                <img src="imagenes/doctora%20aa.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="imagenes/doctora%20ayelen.jpg" class="d-block w-100" alt="...">
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>-->
-    <!-- Modal -->
+
     <div class="modal fade" id="myModal" role="dialog">
         <div class="modal-dialog">
 
