--- a/bootstrap/galeria.html
+++ b/bootstrap/galeria.html
@@ -14,7 +14,7 @@
 
     </head>
     <body>
-        <header class="container">
+        <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
         
                 <div class="container-fluid">
